--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,106 +1,94 @@
-a {
-  color: #337ab7;
-}
-p {
-  margin-top: 1rem;
-}
-a:hover {
-  color:#23527c;
-}
-a:visited {
-  color: #8d75a3;
-}
-
-body {
-	line-height: 1.5;
-	font-family: sans-serif;
-	word-wrap: break-word;
-	overflow-wrap: break-word;
-	color:black;
-	margin:2em;
-}
-
-h1 {
-	text-decoration: underline red;
-	text-decoration-thickness: 3px;
-	text-underline-offset: 6px;
-	font-size: 220%;
-	font-weight: bold;
-}
-
-h2 {
-	font-weight: bold;
-	color: #005A9C;
-	font-size: 140%;
-	text-transform: uppercase;
-}
-
-red {
-	color: red;
-}
-
-#controls {
+/* Styling of navigation bar */
+#navdiv{
+    display:flex;
+    width:17%;
+    margin-left: 82%;
+    justify-content: space-around;
+    margin-top: 1%;
+    height:35px;
+  }
+  nav img{
+    margin-top: 5px;
+  }
+  #googleimg{
+    margin-top: 100px;
+  }
+  /* Removing underline from links*/
+  a{
+    margin-top: 8px;
+    text-decoration: none;
+  }
+  button{
+    border-radius: 3px;
+    height:100%;
+    padding:5px 12px;
+    background-color: #4C87E1 ;
+    color:white;
+    border:none;
+  }
+  /* setting up size and border stle of search bar*/
+  #maindiv{
+  width:35%;
+  border-radius: 50px;
   display: flex;
-  margin-top: 2rem;
-  max-width: 28em;
-} 
-
-button {
-  flex-grow: 1;
-  height: 3rem;
-  min-width: 10rem;
-  border: none;
-  border-radius: 0.15rem;
-  background: #ed341d;
-  margin-left: 2px;
-  box-shadow: inset 0 -0.15rem 0 rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  color:#ffffff;
-  font-weight: bold;
-  font-size: 1rem;
-}
-
-button:hover, button:focus {
-  outline: none;
-  background: #c72d1c;
-}
-
-button::-moz-focus-inner {
-  border: 0;
-}
-
-button:active {
-  box-shadow: inset 0 1px 0 rgba(0, 0, 0, 0.2);
-  line-height: 3rem;
-}
-
-button:disabled {
-  pointer-events: none;
-  background: lightgray;
-}
-button:first-child {
-  margin-left: 0;
-}
-
-audio {
-  display: block;
-  width: 100%;
-  margin-top: 0.2rem;
-}
-
-li {
-  list-style: none;
-  margin-bottom: 1rem;
-}
-
-#formats {
-  margin-top: 0.5rem;
-  font-size: 80%;
-}
-
-#recordingsList{
-	max-width: 28em;
-}
+  height:40px;
+  border:1px solid lightgrey;
+  }
+  #inputspan{
+    width:80%;
+  }
+  span{
+    vertical-align: top;
+  }
+  span:first-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  span:last-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  input{
+    height:100%;
+    width:100%;
+    border: none;
+    padding:0px;
+  }
+  section{
+    display: flex;
+    margin-top: 2%;
+    width:23%;
+    justify-content: space-around;
+    margin-bottom: 2%;
+  }
+  section button{
+    padding:10px 12px;
+    background-color: lightgrey;
+    color:black;
+  }
+  ul{
+    display: flex;
+    width: 30%;
+    padding-left: 0px;
+    list-style: none;
+    justify-content: space-around;
+    margin: 6px;
+  }
+  #Bottomdiv{
+    display:flex;
+    font-size: 12px;
+    margin-top: 3%;
+  }
+  #Bottomdiv span{
+    width:7%;
+    margin-left: 31%;
+  }
+  /*When hovered*/
+  a:hover{
+    text-decoration: underline;
+  }
+  button:hover{
+    border: 1px solid gray;
+  }
