Modificacion de imagen

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -93,7 +93,8 @@
     border: 1px solid gray;
   }
 body{
-  background-color: #000000;
+  background-color:#141414;
+  color: #FFFFFF;
 }
 body nav{
   background-color: #e6d79c;
