--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,10 +1,11 @@
-/* Styling of navigation bar */
-/*#navdiv{
+@media screen and (max-width: 999px) {
+  /* Estilos para pantallas pequeñas */
+  #navdiv{
     display:flex;
     width:17%;
-    margin-left: 82%;
+    margin-left: 60%;
     justify-content: space-around;
-    margin-top: 1%;
+    margin-top: 0%;
     height:35px;
   }*/
   nav img{
@@ -138,3 +139,151 @@ body main form section div button{
 body main form section div button:hover{
   background-color: #b5904e;
 }
+}
+
+  
+@media screen and (min-width: 1000px) and (max-width: 2048px) {
+  /* Estilos para pantallas medianas */
+  #navdiv{
+    display:flex;
+    width:17%;
+    margin-left: 70%;
+    justify-content: space-around;
+    margin-top: 0%;
+    height:35px;
+  }*/
+  nav img{
+    margin-top: 5px;
+  }
+  #googleimg{
+    margin-top: 100px;
+  }
+  /* Removing underline from links*/
+  a{
+    margin-top: 8px;
+    text-decoration: none;
+  }
+  button{
+    border-radius: 3px;
+    height:100%;
+    padding:5px 12px;
+    background-color: #4C87E1 ;
+    color:white;
+    border:none;
+  }
+  /* setting up size and border stle of search bar*/
+  #maindiv{
+  width:35%;
+  border-radius: 50px;
+  display: flex;
+  height:40px;
+  border:1px solid lightgrey;
+  }
+  #inputspan{
+    width:80%;
+  }
+  span{
+    vertical-align: top;
+  }
+  span:first-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  span:last-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  input{
+    height:100%;
+    width:100%;
+    border: none;
+    padding:0px;
+  }
+  section{
+    display: flex;
+    margin-top: 2%;
+    width:23%;
+    justify-content: space-around;
+    margin-bottom: 2%;
+  }
+  section button{
+    padding:10px 12px;
+    background-color: lightgrey;
+    color:black;
+  }
+  ul{
+    display: flex;
+    width: 30%;
+    padding-left: 0px;
+    list-style: none;
+    justify-content: space-around;
+    margin: 6px;
+  }
+  #Bottomdiv{
+    display:flex;
+    font-size: 12px;
+    margin-top: 3%;
+  }
+  #Bottomdiv span{
+    width:7%;
+    margin-left: 31%;
+  }
+  /*When hovered*/
+  a:hover{
+    text-decoration: underline;
+  }
+  button:hover{
+    border: 1px solid gray;
+  }
+body{
+  background-color:#141414;
+  color: #FFFFFF;
+}
+body nav{
+  background-color: #e6d79c;
+  overflow:hidden;
+  height: 55px;
+}
+body nav ul li{
+  float:right;
+}
+
+body nav ul li a{
+  padding: 10px 20px;
+  display: block;
+  text-decoration: none;
+  color:#FFFFFF;
+  padding-bottom: 10px;
+  font-weight: bold;
+  font-size: medium;
+}
+body nav ul li a:hover{
+  background-color: #eadca3;
+  padding-bottom: 10px;
+  text-decoration: none;
+  font-size: 110%;
+}
+body nav ul li div button{
+  background-color: #a18046;
+  height: 50px;
+  font-size: medium;
+  box-shadow: 4px 2px 2px rgba(20, 20, 20, .25);
+}
+body nav ul li div button:hover{
+  background-color: #b5904e;
+}
+.URL{
+  color: #eadca3;
+}
+body main form section div button{
+  background-color: #a18046;
+}
+body main form section div button:hover{
+  background-color: #b5904e;
+}
+}
+  
+  
+ 
