--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,158 +1,15 @@
+
 @media screen and (max-width: 999px) {
   /* Estilos para pantallas pequenas */
   #navdiv{
-    display:flex;
-    width:17%;
-    margin-left: 60%;
+    display:auto;
+    margin-left: 70%;
+    width: 20px;
     justify-content: space-around;
-    margin-top: 0%;
+    margin-top: 1%;
     height:35px;
-  }*/
-  nav img{
-    margin-top: 5px;
-  }
-  #googleimg{
-    margin-top: 100px;
-  }
-  /* Removing underline from links*/
-  a{
-    margin-top: 8px;
-    text-decoration: none;
-    backdrop-filter: blur(10px);
-    
-  }
-  button{
-    border-radius: 3px;
-    height:100%;
-    padding:5px 12px;
-    background-color: #4C87E1 ;
-    color:white;
-    border:none;
-  }
-  /* setting up size and border stle of search bar*/
-  #maindiv{
-  width:35%;
-  border-radius: 50px;
-  display: flex;
-  height:40px;
-  border:1px solid lightgrey;
-  }
-  #inputspan{
-    width:80%;
-  }
-  span{
-    vertical-align: top;
-  }
-  span:first-child{
-    width:10%;
-    border-radius: 50px;
-    margin-top: 7px;
-  }
-  span:last-child{
-    width:10%;
-    border-radius: 50px;
-    margin-top: 7px;
-  }
-  input{
-    height:100%;
-    width:100%;
-    border: none;
-    padding:0px;
-  }
-  section{
-    display: flex;
-    margin-top: 2%;
-    width:23%;
-    justify-content: space-around;
-    margin-bottom: 2%;
-  }
-  section button{
-    padding:10px 12px;
-    background-color: lightgrey;
-    color:black;
-  }
-  ul{
-    display: flex;
-    width: 30%;
-    padding-left: 0px;
-    list-style: none;
-    justify-content: space-around;
-    margin: 6px;
-  }
-  #Bottomdiv{
-    display:flex;
-    font-size: 12px;
-    margin-top: 3%;
-  }
-  #Bottomdiv span{
-    width:7%;
-    margin-left: 31%;
-  }
-  /*When hovered*/
-  a:hover{
-    text-decoration: underline;
-  }
-  button:hover{
-    border: 1px solid gray;
-  }
-body{
-  background-color:#141414;
-  color: #FFFFFF;
-}
-body nav{
-  background-color: #e6d79c;
-  overflow:hidden;
-  height: 55px;
-}
-body nav ul li{
-  float:right;
-}
-
-body nav ul li a{
-  padding: 10px 20px;
-  display: block;
-  text-decoration: none;
-  color:#FFFFFF;
-  padding-bottom: 10px;
-  font-weight: bold;
-  font-size: medium;
-}
-body nav ul li a:hover{
-  background-color: #eadca3;
-  padding-bottom: 10px;
-  text-decoration: none;
-  font-size: 110%;
-}
-body nav ul li div button{
-  background-color: #a18046;
-  height: 50px;
-  font-size: medium;
-  box-shadow: 4px 2px 2px rgba(20, 20, 20, .25);
-}
-body nav ul li div button:hover{
-  background-color: #b5904e;
-}
-.URL{
-  color: #eadca3;
-}
-body main form section div button{
-  background-color: #a18046;
-}
-body main form section div button:hover{
-  background-color: #b5904e;
-}
-}
-
-  
-@media screen and (min-width: 1000px) and (max-width: 2048px) {
-  /* Estilos para pantallas medianas */
-  #navdiv{
-    display:run-in;
-    width:90%;
-    margin-left: 75%;
-    justify-content: space-around;
-    margin-top: 2%;
-    height:35px;
+    margin-left: 90%;
+    text-align: center;
   }*/
   nav img{
     margin-top: 5px;
@@ -167,10 +24,12 @@ body main form section div button:hover{
   button{
     border-radius: 3px;
     height:100%;
-    padding:5px 12px;
+    padding:0% 0%;
     background-color: #b5904e ;
     color:white;
     border:none;
+    margin-top: 1.5%;
+    margin-right: 1%;
 
   }
   span{
@@ -192,12 +51,11 @@ body main form section div button:hover{
     width:25%;
     justify-content: space-around;
     margin-bottom: 2%;
-    margin-left: 2%;
+    margin-left: 1%;
   }
   ul{
     display: flex;
     width: 30%;
-    padding-left: 0px;
     list-style: none;
     justify-content: space-around;
     margin: 6px;
@@ -214,18 +72,12 @@ body main form section div button:hover{
   a:hover{
     text-decoration: underline;
   }
-  button:hover{
-    border: 1px solid gray;
-  }
   body{
     background-color: #141414;
     color: white;
   }
-  body nav ul li{
-    float:right;
-  }
   body nav ul li a{
-    padding: 10px 20px;
+    padding: 1px 2px;
     display: block;
     text-decoration: none;
     color:#FFFFFF;
@@ -239,23 +91,8 @@ body main form section div button:hover{
     text-decoration: none;
     font-size: 110%;
   }
-  body nav ul li div button{
-    background-color: #a18046;
-    height: 50px;
-    font-size: medium;
-    box-shadow: 4px 2px 2px rgba(20, 20, 20, .25);
-  }
-  body nav ul li div button:hover{
-    background-color: #b5904e;
-  }
   .URL{
     color: #eadca3;
-  }
-  body main form section div button{
-    background-color: #a18046;
-  }
-  body main form section div button:hover{
-    background-color: #b5904e;
   }
   button2 {
     border: none;
@@ -342,14 +179,239 @@ body main form section div button:hover{
     box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
     color: #fff;
     font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    margin-left: 1%;
   }
 
+  table {
+    position: relative;
+    border-collapse: collapse; 
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    margin-left: 1%;
+  }
+  th, td {
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    padding: 20px 30px;
+    border: 1px solid white;
+    text-align: center;
+  }
+   
+  th {  
+    position: sticky;
+    top: 0; 
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    background-color: #c89948;
+  }
 }
+
   
-.form-control:focus,
-.form-control:active {
-   background: transparent;
+@media screen and (min-width: 1024px) {
+  /* Estilos para pantallas medianas */
+  #navdiv{
+    display:auto;
+    margin-left: 70%;
+    width: 20px;
+    justify-content: space-around;
+    margin-top: 1%;
+    height:35px;
+    margin-left: 90%;
+    text-align: center;
+  }*/
+  nav img{
+    margin-top: 5px;
+  }
+  #googleimg{
+    margin-top: 100px;
+  }
+  a{
+    margin-top: 23px;
+    text-decoration: none;
+  }
+  button{
+    border-radius: 3px;
+    height:100%;
+    padding:0% 0%;
+    background-color: #b5904e ;
+    color:white;
+    border:none;
+    margin-top: 2%;
+    margin-right: 1%;
+
+  }
+  span{
+    vertical-align: top;
+  }
+  span:first-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  span:last-child{
+    width:10%;
+    border-radius: 50px;
+    margin-top: 7px;
+  }
+  section{
+    display: flex;
+    margin-top: 2%;
+    width:25%;
+    justify-content: space-around;
+    margin-bottom: 2%;
+    margin-left: 1%;
+  }
+  ul{
+    display: flex;
+    width: 30%;
+    list-style: none;
+    justify-content: space-around;
+    margin: 6px;
+  }
+  #Bottomdiv{
+    display: flex;
+    font-size: 12px;
+    margin-top: 3%;
+  }
+  #Bottomdiv span{
+    width:7%;
+    margin-left: 31%;
+  }
+  a:hover{
+    text-decoration: underline;
+  }
+  body{
+    background-color: #141414;
+    color: white;
+  }
+  body nav ul li a{
+    padding: 1px 2px;
+    display: block;
+    text-decoration: none;
+    color:#FFFFFF;
+    padding-bottom: 10px;
+    font-weight: bold;
+    font-size: medium;
+  }
+  body nav ul li a:hover{
+    background-color: #eadca3;
+    padding-bottom: 10px;
+    text-decoration: none;
+    font-size: 110%;
+  }
+  .URL{
+    color: #eadca3;
+  }
+  button2 {
+    border: none;
+    display: flex;
+    position: relative;
+    padding: 0.7em 2.4em;
+    font-size: 18px;
+    background: transparent;
+    cursor: pointer;
+    user-select: none;
+    overflow: hidden;
+    color: rgb(255, 255, 255);
+    z-index: 1;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    font-weight: 500;
+    text-shadow: 0 0 10px #a18046;
+    
+  }
+  button2 span2 {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: transparent;
+    z-index: -1;
+  }
+  button2 span2::before {
+    content: "";
+    display: block;
+    position: absolute;
+    width: 8%;
+    height: 500%;
+    background: var(--lightgray);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) rotate(-60deg);
+    transition: all 0.3s;
+  }
+  button2:hover span2::before {
+    transform: translate(-50%, -50%) rotate(-90deg);
+    width: 100%;
+    background: #b5904e;
+  }
+  button2:active span2::before {
+    background: #b5904e;
+  }
+
+  .shadow__btn {
+    padding: 10px 20px;
+    border: none;
+    font-size: 17px;
+    color: #fff;
+    border-radius: 7px;
+    letter-spacing: 4px;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s;
+    transition-property: box-shadow;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+  }
+  
+  .shadow__btn {
+    background: #c89948;
+    box-shadow: 0 0 25px #c89948;
+  }
+  
+  .shadow__btn:hover {
+    box-shadow: 0 0 5px #c89948,
+                0 0 25px #c89948,
+                0 0 50px #c89948,
+                0 0 100px #c89948;
+  }
+
+  .input {
+    margin: 30px;
+    background: none;
+    border: none;
+    outline: none;
+    max-width: 190px;
+    padding: 10px 20px;
+    font-size: 16px;
+    border-radius: 9999px;
+    box-shadow: inset 2px 5px 10px rgb(5, 5, 5);
+    color: #fff;
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    margin-left: 1%;
+  }
+
+  table {
+    position: relative;
+    border-collapse: collapse; 
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    margin-left: 1%;
+  }
+  th, td {
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    padding: 20px 30px;
+    border: 1px solid white;
+    text-align: center;
+  }
+   
+  th {  
+    position: sticky;
+    top: 0; 
+    font-family: Futura, "Trebuchet MS", Arial, sans-serif;
+    background-color: #c89948;
+  }
+
+  
+
 }
+
+  
 #movies,
 #movies:focus,
 #movies:active {
