--- a/frontend/style.css
+++ b/frontend/style.css
@@ -1,6 +1,5 @@
-
 @media screen and (max-width: 999px) {
-  /* Estilos para pantallas pequenas */
+  /* Estilos para pantallas medianas */
   #navdiv{
     display:auto;
     margin-left: 70%;
@@ -25,14 +24,13 @@
     border-radius: 3px;
     height:100%;
     padding:0% 0%;
-    background-color: #b5904e ;
-    color:white;
     border:none;
-    margin-top: 1.5%;
+    margin-top: 2%;
     margin-right: 1%;
 
   }
   span{
+    margin-top: 2%;
     vertical-align: top;
   }
   span:first-child{
@@ -94,7 +92,7 @@
   .URL{
     color: #eadca3;
   }
-  button2 {
+  button {
     border: none;
     display: flex;
     position: relative;
@@ -111,7 +109,7 @@
     text-shadow: 0 0 10px #a18046;
     
   }
-  button2 span2 {
+  button span2 {
     position: absolute;
     left: 0;
     top: 0;
@@ -120,7 +118,7 @@
     background: transparent;
     z-index: -1;
   }
-  button2 span2::before {
+  button span2::before {
     content: "";
     display: block;
     position: absolute;
@@ -132,12 +130,12 @@
     transform: translate(-50%, -50%) rotate(-60deg);
     transition: all 0.3s;
   }
-  button2:hover span2::before {
+  button:hover span2::before {
     transform: translate(-50%, -50%) rotate(-90deg);
     width: 100%;
     background: #b5904e;
   }
-  button2:active span2::before {
+  button:active span2::before {
     background: #b5904e;
   }
 
@@ -202,9 +200,8 @@
     background-color: #c89948;
   }
 }
-
   
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 999px) {
   /* Estilos para pantallas medianas */
   #navdiv{
     display:auto;
@@ -226,12 +223,10 @@
     margin-top: 23px;
     text-decoration: none;
   }
-  button{
+  button2{
     border-radius: 3px;
     height:100%;
     padding:0% 0%;
-    background-color: #b5904e ;
-    color:white;
     border:none;
     margin-top: 2%;
     margin-right: 1%;
@@ -299,7 +294,7 @@
   .URL{
     color: #eadca3;
   }
-  button2 {
+  button {
     border: none;
     display: flex;
     position: relative;
@@ -316,7 +311,7 @@
     text-shadow: 0 0 10px #a18046;
     
   }
-  button2 span2 {
+  button span2 {
     position: absolute;
     left: 0;
     top: 0;
@@ -325,7 +320,7 @@
     background: transparent;
     z-index: -1;
   }
-  button2 span2::before {
+  button span2::before {
     content: "";
     display: block;
     position: absolute;
@@ -337,12 +332,12 @@
     transform: translate(-50%, -50%) rotate(-60deg);
     transition: all 0.3s;
   }
-  button2:hover span2::before {
+  button:hover span2::before {
     transform: translate(-50%, -50%) rotate(-90deg);
     width: 100%;
     background: #b5904e;
   }
-  button2:active span2::before {
+  button:active span2::before {
     background: #b5904e;
   }
 
